tests/scan/fixtures/validation/negative/clean_rubygems_extconf/ext/extconf.rb
require 'mkmf'

# Standard native extension configuration; no network, no credential reads.
create_makefile('clean_extension')
